Fix anchor link spacings

--- a/css/style-narrower.css
+++ b/css/style-narrower.css
@@ -123,9 +123,14 @@
 
 .anchor{
   display: block;
-  height: 20px;
-  margin-top: -20px;
+  height: 10px;
+  margin-top: -10px;
   visibility: hidden;
+}
+
+#the-story {
+	height: 0px;
+	margin-top: 0px;
 }
 
 #wedding-day {
